# GenericProgrammingAndTheSTL

./: CMakeLists.txt  README.md  TestClassesIncluder.h  main.cpp  normalheader.h
Example_ReadAndPrintLines/: LineIterator.h  SimpleReader.cpp  SimpleReader.h  StrTableIterator.h
Example_ReadAndPrintLines/res/: testReader.txt
Example_ReadAndPrintLines/test/: TestReadAndPrintLines.h
